--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,9 @@
     <title>rsf-web</title>
     <link
       rel="stylesheet"
-      type="text/css"
-      href="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.css">
+      href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.3/dist/semantic.min.css"
+      integrity="sha256-ncjDAd2/rm/vaNTqp7Kk96MfSeHACtbiDU9NWKqNuCI="
+      crossorigin="anonymous">
     <link
       rel="stylesheet"
       type="text/css"
@@ -21,17 +22,25 @@
       <surface-view v-if="channel"></surface-view>
     </div>
     <script
-      src="https://cdn.jsdelivr.net/lodash/4.17.4/lodash.min.js"></script>
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.min.js"
-      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+      src="https://cdn.jsdelivr.net/npm/lodash@4.17.10/lodash.min.js"
+      integrity="sha256-/GKyJ0BQJD8c8UYgf7ziBrs/QgcikS7Fv/SaArgBcEI="
       crossorigin="anonymous"></script>
     <script
-      src="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.js"></script>
+      src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script>
     <script
-      src="https://unpkg.com/vue"></script>
+      src="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.3/dist/semantic.min.js"
+      integrity="sha256-0gIvTkdsp0OOeV8tx3UTdi3ehppGwZbzQMvZJYhbzsE="
+      crossorigin="anonymous"></script>
     <script
-      src="https://js.pusher.com/4.1/pusher.min.js"></script>
+      src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.min.js"
+      integrity="sha256-FtWfRI+thWlNz2sB3SJbwKx5PgMyKIVgwHCTwa3biXc="
+      crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/pusher-js@4.3.1/dist/web/pusher.min.js"
+      integrity="sha256-lulToZoE1vwhiRXmFsx+v2/alaqwuy2+uSI8zkImwes="
+      crossorigin="anonymous"></script>
     <script id="connect-view-template" type="text/x-template">
       <div class="ui middle aligned centered grid">
         <div class="connect-view column">
